--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="ST Tracs">
+        <meta name="description" content="ST TRACS">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Untitled</title>
+        <title>ST TRACS</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+
+        <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </body>
 </html>
