Adds section team

--- a/index.html
+++ b/index.html
@@ -52,8 +52,31 @@
             Second Section
         </section>
 
-        <section class="content" id="team">
-            TEAM
+        <section class="content team" id="team">
+            <h2>L'équipe</h2>
+
+            <div class="table-responsive">
+                <table id="team-table" class="table team-presentation">
+                    <tr>
+                        <td><img src="img/teseo.png" /><p>Bastien Baret</p></td>
+                        <td><img src="img/teseo.png" /><p>Laura Guillemot</p></td>
+                        <td><img src="img/teseo.png" /><p>Hyukchan Kwon</p></td>
+                        <td><img src="img/teseo.png" /><p>Delphine Millet</p></td>
+                    </tr>
+                    <tr>
+                        <td><img src="img/teseo.png" /><p>Thibault Rapin</p></td>
+                        <td><img src="img/teseo.png" /><p>Mathieu Spegagne</p></td>
+                        <td><img src="img/teseo.png" /><p>Oana Suciu</p></td>
+                        <td><img src="img/teseo.png" /><p>Maxime Thébault</p></td>
+                    </tr>
+                    <tr>
+                        <td><img src="img/teseo.png" /><p>Peggy Cellier</p></td>
+                        <td><img src="img/teseo.png" /><p>Laurence Rozé</p></td>
+                        <td><img src="img/teseo.png" /><p>Fabrice Deruy</p></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
         </section>
 
         <section class="content" id="fourth-section">
