--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <title>ST TRACS</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/s2.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
         <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/s2.js"></script>
     </head>
     <body>
         <nav class="st-navbar full" id="st-navbar">
@@ -48,8 +50,92 @@
             First Section
         </section>
 
-        <section class="content" id="second-section">
-            Second Section
+        <section class="content s2" id="second-section">
+            <h1 class="fade1">Skyview</h1>
+            <div class="left">
+                <div class="tablet">
+                    <div class="nav">
+                        <a href="#" data-id="0" data-title="Skyview"></a>
+                        <a href="#" data-id="1" data-title="Dead Reckoning"></a>
+                        <a href="#" data-id="2" data-title="Signal bar"></a>
+                        <a href="#" data-id="3" data-title="Location and maps"></a>
+                        <a href="#" data-id="4" data-title="GNSS information"></a>
+                        <a href="#" data-id="5" data-title="Console"></a>
+                    </div>
+                    <div class="inside">
+                        <img class="" src="img/s2/gif/0.gif" alt=""/>
+                        <img class="hide" src="img/s2/gif/1.gif" alt=""/>
+                        <img class="hide" src="img/s2/gif/2.gif" alt=""/>
+                        <img class="hide" src="img/s2/gif/3.gif" alt=""/>
+                        <img class="hide" src="img/s2/gif/4.gif" alt=""/>
+                        <img class="hide" src="img/s2/gif/5.gif" alt=""/>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="wrapper">
+                    <div class="desc desc0 current">
+                        <blockquote>
+                            <p>Description 1</p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                    <div class="desc desc1">
+                        <blockquote>
+                            <p>Description 2</p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                    <div class="desc desc2">
+                        <blockquote>
+                            <p>Description </p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                    <div class="desc desc3">
+                        <blockquote>
+                            <p>Description 4</p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                    <div class="desc desc4">
+                        <blockquote>
+                            <p>Description 5</p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                    <div class="desc desc5">
+                        <blockquote>
+                            <p>Description 6</p>
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                            </ul>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="content team" id="team">
