--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/s2.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
         <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/s2.js"></script>
     </head>
@@ -50,89 +51,116 @@
             First Section
         </section>
 
-        <section class="content s2" id="second-section">
-            <h1 class="fade1">Skyview</h1>
-            <div class="left">
-                <div class="tablet">
-                    <div class="nav">
-                        <a href="#" data-id="0" data-title="Skyview"></a>
-                        <a href="#" data-id="1" data-title="Dead Reckoning"></a>
-                        <a href="#" data-id="2" data-title="Signal bar"></a>
-                        <a href="#" data-id="3" data-title="Location and maps"></a>
-                        <a href="#" data-id="4" data-title="GNSS information"></a>
-                        <a href="#" data-id="5" data-title="Console"></a>
-                    </div>
-                    <div class="inside">
-                        <img class="" src="img/s2/gif/0.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/1.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/2.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/3.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/4.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/5.gif" alt=""/>
+        <section class="content s2 container-fluid" id="second-section">
+            <h1 class="text-center">Les vues</h1>
+            <h3>Skyview</h3>
+
+            <div class="row">
+                <div class="col-md-12 left">
+
+                    <div class="tablet">
+                        <div class="nav tuto1"
+                             data-toggle="popover"
+                             data-trigger="manual"
+                             data-placement="top"
+                             title="Tuto (1/3)"
+                             data-content="Click sur un des onglets pour changer d'écran, bitch.">
+                            <div class="tuto4"
+                                 data-toggle="popover"
+                                 data-placement="left"
+                                 data-trigger="manual"
+                                 title="Tuto (4/3)"
+                                 data-content="#papierPeintTropSwag"></div>
+                            <a href="#" data-id="0" data-title="Skyview"></a>
+                            <a href="#" data-id="1" data-title="Dead Reckoning"></a>
+                            <a href="#" data-id="2" data-title="Signal bar"></a>
+                            <a href="#" data-id="3" data-title="Location and maps"></a>
+                            <a href="#" data-id="4" data-title="GNSS information"></a>
+                            <a href="#" data-id="5" data-title="Console"></a>
+                        </div>
+                        <div class="inside tuto2"
+                             data-toggle="popover"
+                             data-placement="left"
+                             data-trigger="manual"
+                             title="Tuto (2/3)"
+                             data-content="C'est bien, maintenant regarde mes gif. Ils sont pas beaux ? ... Quoi ? 8Mo ? osef.">
+                            <div class="tuto3"
+                                 data-toggle="popover"
+                                 data-placement="right"
+                                 data-trigger="manual"
+                                 title="Tuto (3/3)"
+                                 data-content="Et puis la il y a des infos cool."></div>
+                            <img class="" src="img/s2/gif/0.gif" alt=""/>
+                            <img class="hide" src="img/s2/gif/1.gif" alt=""/>
+                            <img class="hide" src="img/s2/gif/2.gif" alt=""/>
+                            <img class="hide" src="img/s2/gif/3.gif" alt=""/>
+                            <img class="hide" src="img/s2/gif/4.gif" alt=""/>
+                            <img class="hide" src="img/s2/gif/5.gif" alt=""/>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="right">
-                <div class="wrapper">
-                    <div class="desc desc0 current">
-                        <blockquote>
-                            <p>Description 1</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc1">
-                        <blockquote>
-                            <p>Description 2</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc2">
-                        <blockquote>
-                            <p>Description </p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc3">
-                        <blockquote>
-                            <p>Description 4</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc4">
-                        <blockquote>
-                            <p>Description 5</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc5">
-                        <blockquote>
-                            <p>Description 6</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
+                <div class="col-md-5 right hide">
+                    <div class="wrapper">
+                        <div class="desc desc0 current">
+                            <blockquote>
+                                <p>Description 1</p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
+                        <div class="desc desc1">
+                            <blockquote>
+                                <p>Description 2</p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
+                        <div class="desc desc2">
+                            <blockquote>
+                                <p>Description </p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
+                        <div class="desc desc3">
+                            <blockquote>
+                                <p>Description 4</p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
+                        <div class="desc desc4">
+                            <blockquote>
+                                <p>Description 5</p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
+                        <div class="desc desc5">
+                            <blockquote>
+                                <p>Description 6</p>
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                </ul>
+                            </blockquote>
+                        </div>
                     </div>
                 </div>
             </div>
