--- a/index.html
+++ b/index.html
@@ -1,213 +1,262 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="ST TRACS">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ST TRACS</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/s2.css">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
-        <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/s2.js"></script>
-    </head>
-    <body>
-        <nav class="st-navbar full" id="st-navbar">
-            <div class="st-container">
-                <a href="#" class="navbar-logo">
-                    <img src="img/teseo.png" />
-                </a>
-                <div class="navbar-menu">
-                    <a href="#header" class="active">Accueil</a>
-                    <a href="#first-section">Section1</a>
-                    <a href="#second-section">Section2</a>
-                    <a href="#team">L'équipe</a>
-                    <a href="#fourth-section">Section4</a>
-                </div>
-                <div class="navbar-ico-resp" id="navbar-ico-resp">
-                </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="ST TRACS">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ST TRACS</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/s2.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/s2.js"></script>
+</head>
+<body>
+<nav class="st-navbar full" id="st-navbar">
+    <div class="st-container">
+        <a href="#" class="navbar-logo">
+            <img src="img/teseo.png" />
+        </a>
+
+        <div class="navbar-menu">
+            <a href="#header" class="active">Accueil</a>
+            <a href="#first-section">Section1</a>
+            <a href="#second-section">Section2</a>
+            <a href="#team">L'équipe</a>
+            <a href="#fourth-section">Section4</a>
+        </div>
+        <div class="navbar-ico-resp" id="navbar-ico-resp">
+        </div>
+    </div>
+</nav>
+<section id="header">
+    <div class="bg-cover">
+        <div class="header-content st-container" id="header-content">
+            <h1>TESEO</h1>
+
+            <p>Une application mise en place en partenariat avec l'entreprise ST Microelectronics par des étudiants de l'INSA de Rennes.</p>
+
+            <a class="header-btn discover-btn" href="#first-section">Découvrez</a>
+        </div>
+        <div class="scroll-down">
+            <a href="#first-section" class="discover-btn">
+                <img src="img/scrollDown.png">
+            </a>
+        </div>
+    </div>
+</section>
+
+<section class="content" id="first-section">
+
+    <div class="presentation-schema">
+        L'application peut analyser les données fournies par le capteur GPS d'un terminal Android
+        Mais elle peut aussi analyser les données provenant d'une puce GPS externe, reliée par Bluetooth
+        Elle peut aussi lire des informations GPS pré-enregistrées
+    </div>
+
+    <div class="presentation-sttracs">
+        ST-TRACS est une application Android permettant d'analyser les données fournies par une puce GPS.
+        Elle permet, via 6 écrans principaux, de visualiser une grande variété d'informations : satellites utilisés, position, vitesse, altitude, etc.
+        Elle permet par ailleurs de visualiser les informations de Dead Reckoning spécifiques à STMicroelectronics.
+        L'application sera utilisée par l'entreprise pour conduire des tests grandeur nature sur cette technologie.
+    </div>
+
+    <div class="presentation-dr">
+        Le Dead Reckoning est une technologie offrant la possibilité de poursuivre la navigation assistée par GPS, même lors de la perte des signaux satellites.
+        Ce phénomène peut survenir régulièrement dans les zones urbaines, les signaux étant facilement obstrués par les gratte-ciels, les tunnels, les parkings, etc.
+        Le Dead Reckoning est mis en œuvre grâce à l'utilisation de capteurs (accéléromètre, gyroscope, boussole), qui permettent d'estimer les déplacements de l'utilisateur après la perte de signal.
+    </div>
+</section>
+
+<section class="content s2" id="second-section">
+    <h1 class="fade1">Skyview</h1>
+
+    <div class="left">
+        <div class="tablet">
+            <div class="nav">
+                <a href="#" data-id="0" data-title="Skyview"></a>
+                <a href="#" data-id="1" data-title="Dead Reckoning"></a>
+                <a href="#" data-id="2" data-title="Signal bar"></a>
+                <a href="#" data-id="3" data-title="Location and maps"></a>
+                <a href="#" data-id="4" data-title="GNSS information"></a>
+                <a href="#" data-id="5" data-title="Console"></a>
             </div>
-        </nav>
-        <section id="header">
-            <div class="bg-cover">
-                <div class="header-content st-container" id="header-content">
-                    <h1>TESEO</h1>
-                    <p>Une application mise en place en partenariat avec l'entreprise ST Microelectronics par des étudiants de l'INSA de Rennes.</p>
-
-                    <a class="header-btn discover-btn" href="#first-section">Découvrez</a>
-                </div>
-                <div class="scroll-down">
-                    <a href="#first-section" class="discover-btn">
-                        <img src="img/scrollDown.png">
-                    </a>
-                </div>
+            <div class="inside">
+                <img class="" src="img/s2/gif/0.gif" alt="" />
+                <img class="hide" src="img/s2/gif/1.gif" alt="" />
+                <img class="hide" src="img/s2/gif/2.gif" alt="" />
+                <img class="hide" src="img/s2/gif/3.gif" alt="" />
+                <img class="hide" src="img/s2/gif/4.gif" alt="" />
+                <img class="hide" src="img/s2/gif/5.gif" alt="" />
             </div>
-        </section>
+        </div>
+    </div>
+    <div class="right">
+        <div class="wrapper">
+            <div class="desc desc0 current">
+                <blockquote>
+                    <p>Description 1</p>
 
-        <section class="content" id="first-section">
-            First Section
-        </section>
-
-        <section class="content s2" id="second-section">
-            <h1 class="fade1">Skyview</h1>
-            <div class="left">
-                <div class="tablet">
-                    <div class="nav">
-                        <a href="#" data-id="0" data-title="Skyview"></a>
-                        <a href="#" data-id="1" data-title="Dead Reckoning"></a>
-                        <a href="#" data-id="2" data-title="Signal bar"></a>
-                        <a href="#" data-id="3" data-title="Location and maps"></a>
-                        <a href="#" data-id="4" data-title="GNSS information"></a>
-                        <a href="#" data-id="5" data-title="Console"></a>
-                    </div>
-                    <div class="inside">
-                        <img class="" src="img/s2/gif/0.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/1.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/2.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/3.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/4.gif" alt=""/>
-                        <img class="hide" src="img/s2/gif/5.gif" alt=""/>
-                    </div>
-                </div>
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
             </div>
-            <div class="right">
-                <div class="wrapper">
-                    <div class="desc desc0 current">
-                        <blockquote>
-                            <p>Description 1</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc1">
-                        <blockquote>
-                            <p>Description 2</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc2">
-                        <blockquote>
-                            <p>Description </p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc3">
-                        <blockquote>
-                            <p>Description 4</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc4">
-                        <blockquote>
-                            <p>Description 5</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                    <div class="desc desc5">
-                        <blockquote>
-                            <p>Description 6</p>
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                            </ul>
-                        </blockquote>
-                    </div>
-                </div>
+            <div class="desc desc1">
+                <blockquote>
+                    <p>Description 2</p>
+
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
             </div>
-        </section>
+            <div class="desc desc2">
+                <blockquote>
+                    <p>Description </p>
 
-        <section class="content team" id="team">
-            <h2>L'équipe</h2>
-
-            <div class="table-responsive">
-                <table id="team-table" class="table team-presentation">
-                    <tr>
-                        <td><img src="img/teseo.png" /><p>Bastien Baret</p></td>
-                        <td><img src="img/teseo.png" /><p>Laura Guillemot</p></td>
-                        <td><img src="img/teseo.png" /><p>Hyukchan Kwon</p></td>
-                        <td><img src="img/teseo.png" /><p>Delphine Millet</p></td>
-                    </tr>
-                    <tr>
-                        <td><img src="img/teseo.png" /><p>Thibault Rapin</p></td>
-                        <td><img src="img/teseo.png" /><p>Mathieu Spegagne</p></td>
-                        <td><img src="img/teseo.png" /><p>Oana Suciu</p></td>
-                        <td><img src="img/teseo.png" /><p>Maxime Thébault</p></td>
-                    </tr>
-                    <tr>
-                        <td><img src="img/teseo.png" /><p>Peggy Cellier</p></td>
-                        <td><img src="img/teseo.png" /><p>Laurence Rozé</p></td>
-                        <td><img src="img/teseo.png" /><p>Fabrice Deruy</p></td>
-                        <td></td>
-                    </tr>
-                </table>
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
             </div>
-        </section>
+            <div class="desc desc3">
+                <blockquote>
+                    <p>Description 4</p>
 
-        <section class="content" id="fourth-section">
-            Fourth Section
-        </section>
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
+            </div>
+            <div class="desc desc4">
+                <blockquote>
+                    <p>Description 5</p>
 
-        <script type="text/javascript">
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
+            </div>
+            <div class="desc desc5">
+                <blockquote>
+                    <p>Description 6</p>
 
-            $(document).on('click','.responsive .navbar-menu a', function() {
-                $("#st-navbar").toggleClass('reponsive');
-            })
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul>
+                </blockquote>
+            </div>
+        </div>
+    </div>
+</section>
 
-            function juizScrollTo(element){
-                $(element).click(function(){
-                    var goscroll = false;
-                    var the_hash = $(this).attr("href");
-                    var regex = new RegExp("\#(.*)","gi");
-                    var the_element = '';
-             
-                    if(the_hash.match("\#(.+)")) {
-                        the_hash = the_hash.replace(regex,"$1");
+<section class="content team" id="team">
+    <h2>L'équipe</h2>
 
-                        if($("#"+the_hash).length>0) {
-                            the_element = "#" + the_hash;
-                            goscroll = true;
-                        }
-                        else if($("a[name=" + the_hash + "]").length>0) {
-                            the_element = "a[name=" + the_hash + "]";
-                            goscroll = true;
-                        }
+    <div class="table-responsive">
+        <table id="team-table" class="table team-presentation">
+            <tr>
+                <td><img src="img/teseo.png" />
 
-                        if(goscroll) {
-                            if ($(element).parents('.responsive').length) {
-                                $("#st-navbar").toggleClass('responsive');
-                            }
-                            scrollIndex = $(the_element).offset().top - 60;
-                            $('html, body').animate({
-                                scrollTop:scrollIndex
-                            }, 'slow');
-                            return false;
-                        }
+                    <p>Bastien Baret</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Laura Guillemot</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Hyukchan Kwon</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Delphine Millet</p></td>
+            </tr>
+            <tr>
+                <td><img src="img/teseo.png" />
+
+                    <p>Thibault Rapin</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Mathieu Spegagne</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Oana Suciu</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Maxime Thébault</p></td>
+            </tr>
+            <tr>
+                <td><img src="img/teseo.png" />
+
+                    <p>Peggy Cellier</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Laurence Rozé</p></td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Fabrice Deruy</p></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
+</section>
+
+<section class="content" id="fourth-section">
+    Fourth Section
+</section>
+
+<script type="text/javascript">
+
+    $(document).on('click', '.responsive .navbar-menu a', function() {
+        $("#st-navbar").toggleClass('reponsive');
+    });
+
+    function juizScrollTo(element) {
+        $(element).click(function() {
+            var goscroll = false;
+            var the_hash = $(this).attr("href");
+            var regex = new RegExp("\#(.*)", "gi");
+            var the_element = '';
+
+            if(the_hash.match("\#(.+)")) {
+                the_hash = the_hash.replace(regex, "$1");
+
+                if($("#" + the_hash).length > 0) {
+                    the_element = "#" + the_hash;
+                    goscroll = true;
+                }
+                else if($("a[name=" + the_hash + "]").length > 0) {
+                    the_element = "a[name=" + the_hash + "]";
+                    goscroll = true;
+                }
+
+                if(goscroll) {
+                    if($(element).parents('.responsive').length) {
+                        $("#st-navbar").toggleClass('responsive');
                     }
-                });
-            };
-            juizScrollTo('a[href^="#"]');
-        </script>
-    </body>
+                    scrollIndex = $(the_element).offset().top - 60;
+                    $('html, body').animate({
+                        scrollTop: scrollIndex
+                    }, 'slow');
+                    return false;
+                }
+            }
+        });
+    }
+    juizScrollTo('a[href^="#"]');
+</script>
+</body>
 </html>
