--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
                     <p>
                         Lorsqu’on clique sur le bouton settings qui se trouve dans le coin supérieur
-                        droit de chaque vue, un menu s’affichera. Il s’agit de ce que l’on appelle le
-                        menu d’options. Il comporte plusieurs champs comme nous pouvons le voir ci-contre.
+                        droit de chaque vue, un menu s’affiche. Il s’agit du menu d’options.
+                        Il comporte plusieurs champs comme nous pouvons le voir ci-contre.
                     </p>
                 </div>
             </div>
@@ -279,12 +279,12 @@
 
                     <p>
                         Si la tablette détecte des appareils connectés en bluetooth, l'application doit permettre
-                        à l’utilisateur de s’y connecter. Dans le cas contraire, elle va se connecter automatiquement
+                        à l’utilisateur de s’y connecter. Dans le cas contraire, elle se connecte automatiquement
                         au GPS interne. Cette vue nous propose tous les appareils (GPS)
                         , qu’ils soient internes ou externes, ainsi que leur adresse MAC. Une fois
-                        l’appareil sélectionné, une boîte de dialogue apparaîtra, dans laquelle il y aura
-                        une barre de progression pour indiquer les étapes de connexion. Aussi, il aura
-                        la possibilité d’annuler la connexion en cours.
+                        l’appareil sélectionné, une boîte de dialogue apparaît, dans laquelle il y a
+                        une barre de progression pour indiquer les étapes de connexion ainsi qu'un bouton permettant
+                        d’annuler cette connexion en cours.
                     </p>
                 </div>
             </div>
@@ -298,12 +298,13 @@
 
                     <p>
                         Cette vue nous permet de rejouer un parcours déjà enregistré.
-                        Elle contient donc tous les dossiers, ainsi que les fichiers NMEA ou binaire ST
-                        présent sur la carte SD. Lorsque l’utilisateur choisit un de ces fichiers, une boîte
-                        de dialogue s’affichera où il pourra régler plusieurs paramètres comme la vitesse
-                        à laquelle il veut que la vidéo se déroule. De plus, il pourra choisir à partir de
+                        Pour cela elle donne accès à un explorateur de fichier où l’utilisateur pourra selectionner le
+                        fichier qu'il veut rejouer.
+                        Après la séléction, une boîte de dialogue s’affiche où il peut régler plusieurs paramètres comme
+                        la vitesse
+                        à laquelle il veut que la vidéo se déroule. De plus, il peut choisir à partir de
                         quel moment il veut rejouer la vidéo grâce à un curseur de contrôle. Après avoir
-                        choisi les réglages qui lui conviennent, l’utilisateur pourra lancer le playback ou
+                        choisi les réglages qui lui conviennent, l’utilisateur peut lancer le playback ou
                         annuler en cliquant sur les deux boutons respectifs.
                     </p>
                 </div>
@@ -319,10 +320,10 @@
                     <p>
                         Cette vue permet d’envoyer des fichiers présents sur la carte SD
                         vers un serveur FTP si la connexion réseau est établie (3G/wifi). L’utilisateur
-                        a la possiblité de choisir le fichier qu’il veut enregistrer et une fois qu’il l’a
-                        sélectionné une boîte de dialogue apparaît qui lui spécifiera le nom du fichier
-                        choisi, la progression de l’enregistrement et qui lui donnera l’opportunité d’annuler
-                        l’envoi. De plus, l’utilisateur y trouvera à titre informatif l’adresse IP du
+                        a la possiblité de choisir le fichier qu’il veut enregistrer. Une fois qu’il l’a
+                        sélectionné une boîte de dialogue apparaît avec la possibilité de spécifier le nom du fichier
+                        choisi, la progression de l’enregistrement ainsi ainsi qu'un bouton pour annuler
+                        l’envoi. La vue présente aussi à titre informatif l’adresse IP du
                         serveur FTP, le port de connexion, ainsi que le login et son mot de passe.
                     </p>
                 </div>
@@ -336,7 +337,7 @@
                     <h3>Settings</h3>
 
                     <p>
-                        Cette vue permet à l’utilisateur de faire plusieurs réglages et ressemblera à
+                        Cette vue permet à l’utilisateur de faire plusieurs réglages et ressemble à
                         la figure ci-contre. Les différents réglages possibles seront :
                     </p>
 
