--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                  data-trigger="manual"
                                  title="Tuto (3/3)"
                                  data-content="Et puis la il y a des infos cool."></div>
-                            <img class="" src="img/s2/gif/0.gif" alt=""/>
-                            <img class="hide" src="img/s2/gif/1.gif" alt=""/>
+                            <img class="i1" src="img/s2/gif/0.gif" alt=""/>
+                            <img class="i2" src="img/s2/gif/1.gif" alt=""/>
                             <img class="hide" src="img/s2/gif/2.gif" alt=""/>
                             <img class="hide" src="img/s2/gif/3.gif" alt=""/>
                             <img class="hide" src="img/s2/gif/4.gif" alt=""/>
