--- a/index.html
+++ b/index.html
@@ -48,23 +48,29 @@
         </section>
 
         <section class="content" id="first-section">
-            <div class="presentation-schema">
-                L'application peut analyser les données fournies par le capteur GPS d'un terminal Android
-                Mais elle peut aussi analyser les données provenant d'une puce GPS externe, reliée par Bluetooth
-                Elle peut aussi lire des informations GPS pré-enregistrées
-            </div>
-
-            <div class="presentation-sttracs">
-                ST-TRACS est une application Android permettant d'analyser les données fournies par une puce GPS.
-                Elle permet, via 6 écrans principaux, de visualiser une grande variété d'informations : satellites utilisés, position, vitesse, altitude, etc.
-                Elle permet par ailleurs de visualiser les informations de Dead Reckoning spécifiques à STMicroelectronics.
-                L'application sera utilisée par l'entreprise pour conduire des tests grandeur nature sur cette technologie.
-            </div>
-
-            <div class="presentation-dr">
-                Le Dead Reckoning est une technologie offrant la possibilité de poursuivre la navigation assistée par GPS, même lors de la perte des signaux satellites.
-                Ce phénomène peut survenir régulièrement dans les zones urbaines, les signaux étant facilement obstrués par les gratte-ciels, les tunnels, les parkings, etc.
-                Le Dead Reckoning est mis en œuvre grâce à l'utilisation de capteurs (accéléromètre, gyroscope, boussole), qui permettent d'estimer les déplacements de l'utilisateur après la perte de signal.
+            <div class="st-container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 project-presentation-description">
+                            <p>TESEO est une application développée par des étudiants de l'INSA de Rennes en département informatique dans le cadre du projet de 4ème année en partenariat avec l'entreprise ST Microelectronics.</p>
+                        </div>
+                        <div class="col-md-4 project-presentation-col">
+                            <span class="icon-user-tie st-icon"></span>
+                            <h3>Le client</h3>
+                            <p>C'est l'entreprise ST Microelectronics qui nous a sollicité pour répondre à un besoin réel de l'entreprise.</p>
+                        </div>
+                        <div class="col-md-4 project-presentation-col">
+                            <span class="icon-profile st-icon"></span>
+                            <h3>Son besoin</h3>
+                            <p>L'entreprise veut tester sa solution de <strong>Dead Reckoning</strong>: un algorithme permettant de calculer la position actuelle lors d'une perte de signal GPS grâce aux différents capteurs présents dans la voiture.</p>
+                        </div>
+                        <div class="col-md-4 project-presentation-col">
+                            <span class="icon-mobile2 st-icon"></span>
+                            <h3>La solution</h3>
+                            <p>La solution envisagée est une application Android permettant de visualiser les différentes données GPS et de l'algorithme Dead Reckoning.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
