Small changes to make a better world !

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </a>
 
         <div class="navbar-menu">
-            <a href="#header" class="active">Accueil</a>
-            <a href="#first-section">Section1</a>
-            <a href="#second-section">Section2</a>
-            <a href="#team">L'équipe</a>
-            <a href="#fourth-section">Section4</a>
+            <a href="#header" class="active">ST-TRACS</a>
+            <a href="#first-section">Contexte</a>
+            <a href="#second-section">Présentation</a>
+            <a href="#third-section">Extras</a>
+            <a href="#fourth-section">Equipe</a>
         </div>
         <div class="navbar-ico-resp" id="navbar-ico-resp">
         </div>
@@ -39,12 +39,18 @@
 <section id="header">
     <div class="bg-cover">
         <div class="header-content st-container" id="header-content">
-            <h1>TESEO</h1>
+            <h1>ST TRACS</h1>
+            <h2>
+                <span class="header-first-letter">T</span>eseo
+                <span class="header-first-letter">R</span>eceiver
+                <span class="header-first-letter">A</span>dvanced
+                <span class="header-first-letter">C</span>ontrol
+                <span class="header-first-letter">S</span>uite
+            </h2>
 
-            <p>Une application mise en place en partenariat avec l'entreprise ST Microelectronics par des étudiants de
-               l'INSA de Rennes.</p>
+            <p>Une application Android dédiée à l'analyse de données GPS & Dead Reckoning</p>
 
-            <a class="header-btn discover-btn" href="#first-section">Découvrez</a>
+            <a class="header-btn discover-btn" href="#first-section">Découvrir</a>
         </div>
         <div class="scroll-down">
             <a href="#first-section" class="discover-btn">
@@ -59,22 +65,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 project-presentation-description">
-                    <p>TESEO est une application développée par des étudiants de l'INSA de Rennes en département informatique dans le cadre du projet de 4ème année en partenariat avec l'entreprise ST Microelectronics.</p>
+                    <p>ST-TRACS est une application développée par 8 étudiants du département informatique de l'INSA de Rennes, en collaboration avec STMicroelectronics</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-user-tie st-icon"></span>
                     <h3>Le client</h3>
-                    <p>C'est l'entreprise ST Microelectronics qui nous a sollicité pour répondre à un besoin réel de l'entreprise.</p>
+                    <p>La division automobile de STMicroelectronics nous a sollicité pour répondre à un besoin réel de l'entreprise</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-profile st-icon"></span>
                     <h3>Son besoin</h3>
-                    <p>L'entreprise veut tester sa solution de <strong>Dead Reckoning</strong>: un algorithme permettant de calculer la position actuelle lors d'une perte de signal GPS grâce aux différents capteurs présents dans la voiture.</p>
+                    <p>L'entreprise veut tester sa solution de <strong>Dead Reckoning</strong>, une technologie offrant la possibilité de poursuivre la navigation assistée par GPS même lors de la perte des signaux satellites.</p>
                 </div>
                 <div class="col-md-4 project-presentation-col">
                     <span class="icon-mobile2 st-icon"></span>
                     <h3>La solution</h3>
-                    <p>La solution envisagée est une application Android permettant de visualiser les différentes données GPS et de l'algorithme Dead Reckoning.</p>
+                    <p>La solution envisagée est une application Android permettant aux collaborateurs de STMicroelectronics de visualiser les données GPS et Dead Reckoning renvoyées par la puce testée.</p>
                 </div>
             </div>
         </div>
@@ -82,7 +88,7 @@
 </section>
 
 <section class="content s2 container-fluid" id="second-section">
-    <h1 class="text-center">Les vues</h1>
+    <h1 class="text-center">Présentation</h1>
 
     <h3>Skyview</h3>
 
@@ -180,57 +186,8 @@
     </div>
 </section>
 
-<section class="content team" id="team">
-    <h2>L'équipe</h2>
-
-    <div class="table-responsive">
-        <table id="team-table" class="table team-presentation">
-            <tr>
-                <td><img src="img/teseo.png" />
-
-                    <p>Bastien Baret</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Laura Guillemot</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Hyukchan Kwon</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Delphine Millet</p></td>
-            </tr>
-            <tr>
-                <td><img src="img/teseo.png" />
-
-                    <p>Thibault Rapin</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Mathieu Spegagne</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Oana Suciu</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Maxime Thébault</p></td>
-            </tr>
-            <tr>
-                <td><img src="img/teseo.png" />
-
-                    <p>Peggy Cellier</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Laurence Rozé</p></td>
-                <td><img src="img/teseo.png" />
-
-                    <p>Fabrice Deruy</p></td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-</section>
-
-<section class="content" id="fourth-section" style="background-color: #336633">
-    <h2>Menu d'options</h2>
+<section class="content container-fluid" id="third-section" style="background-color: #336633">
+    <h2>Extras</h2>
 
     <div class="carousel">
         <div class="carousel-slide">
@@ -337,7 +294,68 @@
             </div>
         </div>
     </div>
+</section>
 
+<section class="content team" id="fourth-section">
+    <h2>L'équipe</h2>
+
+    <div class="table-responsive">
+        <table id="team-table" class="table team-presentation">
+            <tr>
+                <td><img src="img/teseo.png" />
+
+                    <p>Bastien Baret</p>
+                    <p class="fonction">Etudiant</p>
+                </td>
+                <td><img src="img/teseo.png" />
+
+                    <p>Laura Guillemot</p>
+                    <p class="fonction">Etudiante</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Hyukchan Kwon</p>
+                    <p class="fonction">Etudiant</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Delphine Millet</p>
+                    <p class="fonction">Etudiante</p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="img/teseo.png" />
+                    <p>Thibault Rapin</p>
+                    <p class="fonction">Etudiant</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Mathieu Spegagne</p>
+                    <p class="fonction">Etudiant</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Oana Suciu</p>
+                    <p class="fonction">Etudiante</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Maxime Thébault</p>
+                    <p class="fonction">Etudiant</p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="img/teseo.png" />
+                    <p>Peggy Cellier</p>
+                    <p class="fonction">Encadrante</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Laurence Rozé</p>
+                    <p class="fonction">Encadrante</p>
+                </td>
+                <td><img src="img/teseo.png" />
+                    <p>Fabrice Deruy</p>
+                    <p class="fonction">Client</p>
+                </td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
 </section>
 
 <script type="text/javascript">
